SERVER-31763 $changeStream on sharded collections must always split on mongoS even if targeting a single shard